# GeneBench

./: MANIFEST.in  README.md  benchmark.py  config.json  datatypes.py  generatesilico.py  geoimporter.py  requirements.txt  setup.cfg  setup.py  training_config.json  utils.py
diffmethods/: chdir.py  limma.py  sam.py  ttest.py
diffmethods/MIDGET/: neural.py
diffmethods/base/: diffmethod.py
diffmethods/base/R/: limma.r  sam.r
evaluationmetrics/: base.py  f1.py
examples/: benchmark.py  config.json  customneural.py  importgeodata.py  importvalidationdata.py  silicotest.py  startup.py  train.py  training_config.json
genebench/: GEOdatasets_drugs_perturbations.json  GEOdatasets_tf_perturbations.json  benchmark.py  generatesilico.py  geoimporter.py  requirements.txt  startup.py  utils.py  validationdataimporter.py
genebench/diffmethods/: chdir.py  chdirpy.py  diffmethodsmanager.py  limma.py  random.py  sam.py  ttest.py
genebench/diffmethods/MIDGET/: common.py  neural.py  xgb.py
genebench/diffmethods/base/: diffmethod.py  rdiffmethod.py
genebench/diffmethods/base/R/: characteristic_direction.r
genebench/evaluationmetrics/: base.py  f1.py  kolmogorov.py  metricmanager.py  roc.py
genebench/silico/: silicogeneratorsmanager.py
genebench/silico/generators/: base.py  linear.py
genebench/storage/: storage.py  storageprovider.py  storageproviderfilesystem.py  storageprovidermongo.py
silico/generators/: base.py
storage/: storage.py  storageprovider.py  storageprovidermongo.py
