[metadata]
name = genebench
version = 0.0.4
author = Radu Angelescu
author_email = raduangelescu@gmail.com
description = Benchmark-ing framework used in analyzing methods that detect deferentially expressed genes from biological samples
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raduangelescu/GeneBench
project_urls =
    Bug Tracker = https://github.com/raduangelescu/GeneBench/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
        GEOparse
        matplotlib
        numpy==1.19.2
        pandas
        pymongo
        rpy2
        scipy
        sklearn
        tensorflow_gpu
        xgboost